<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp">

    <TextView
        android:id="@+id/tv_recommend_movies"
        style="@style/Text.Header1"
        android:lines="1"
        android:text="@string/tv_newly_movies"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Newly Movies" />

    <TextView
        android:id="@+id/tv2_recommend_movies"
        style="@style/Text.SubHeader"
        android:lines="1"
        android:layout_marginBottom="10dp"
        android:text="@string/tv2_recommend_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_recommend_movies"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_see_all_recommend"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tv_see_all"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_recommend_movies"
        app:layout_constraintBottom_toBottomOf="@id/tv2_recommend_movies"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2_recommend_movies"
        tools:listitem="@layout/item_main_component" />

</androidx.constraintlayout.widget.ConstraintLayout>